<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="skip">Skip</string>
    <string name="madeBy">By: Jacob, Dayne and Goeun</string>
    <string name="app_name">PRODUCE PICKER</string>
    <string name="startButton">START</string>
    <string name="scoreButton">SCORES</string>
    <string name="optionButton">OPTIONS</string>
    <string name="helpButton">HELP</string>
    <string name="fruitButton">FRUITS</string>
    <string name="vegeButton">VEGGIES</string>
    <string name="fruitImgTxt">FRUITS+TEXT</string>
    <string name="vegImgTxt">VEGGIES+TEXT</string>
    <string name="optionMessage">OPTION MUST BE SELECTED TO SET</string>
    <string name="setButton">SET</string>
    <string name="rules_title">Rules</string>
    <string name="winMessage">YOU FOUND ALL \n OF THE MATCHES :D</string>
    <string name="loseMessage">YOUR SCORE DIDN\'T MAKE IT TO THE SCORE BOARD</string>
    <string name="addScore">ADD</string>
    <string name="cancelScore" tools:ignore="ButtonCase">CANCEL</string>
    <string name="backToMenu">MENU</string>
    <string name="nicknameHint">NICKNAME</string>
    <string name="scorePageTitle">TOP 5 SCORES</string>
    <string name="reset">RESET</string>
    <string name="rules">Welcome to Produce Picker! There is a deck with 7 cards and each card has 3 images on it. The top card is placed face up separately in the discard pile and you must match an image on a card in the main pile with one in the discard pile while being timed. The card is then put in the discard pile and this repeats until no cards are left and the timer stops.</string>
    <string name="nicknameMessage">NICKNAME MUST BE INPUTTED</string>
    <string name="discard_pile">Discard Pile</string>
    <string name="draw_pile">Draw Pile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_selector">Images</string>
    <string name="Search">search</string>
    <string name="order2">ORDER 2</string>
    <string name="order3">ORDER 3</string>
    <string name="order5">ORDER 5</string>
    <string name="size5">PILE-SIZE:5</string>
    <string name="size10">PILE-SIZE:10</string>
    <string name="size15">PILE-SIZE:15</string>
    <string name="size20">PILE-SIZE:20</string>
    <string name="sizeAll">PILE-SIZE:\"ALL\"</string>
    <string name="sizeWarning">Please select a valid pile size</string>
    <string name="match">Match!</string>
    <string name="noMatch">No Match</string>
    <string name="FLICKR">FLICKR</string>
    <string name="easy">EASY</string>
    <string name="medium">MEDIUM</string>
    <string name="hard">HARD</string>
    <string name="edit_images">Edit Images</string>
    <string name="ex_text">Download cards</string>
    <string name="device">DEVICE</string>
    <string name="exMessage">To find your downloaded cards, go to settings->storage->Internal shared storage->Other and inside the folder named "card_pics</string>
    >>>>>>> app/src/main/res/values/strings.xml
</resources>
