<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="cmpt276.projectUI.optionPage">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="41dp"
        android:layout_height="34dp"
        android:background="#80CBC4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/abc_vector_test"
        tools:ignore="ContentDescription,PrivateResource" />

    <RadioGroup
        android:id="@+id/options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.423">

        <RadioButton
            android:id="@+id/vegeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E1F5FE"
            android:text="@string/vegeButton"
            android:textColor="#1B5E20"
            android:textSize="36sp"
            android:textStyle="bold"
            app:fontFamily="@font/chicle" />

        <RadioButton
            android:id="@+id/fruitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FCE4EC"
            android:text="@string/fruitButton"
            android:textColor="#1B5E20"
            android:textSize="36sp"
            android:textStyle="bold"
            app:fontFamily="@font/chicle" />

        <RadioButton
            android:id="@+id/fruitImgTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FCE4EC"
            android:text="@string/fruitImgTxt"
            android:textColor="#1B5E20"
            android:textSize="36sp"
            android:textStyle="bold"
            app:fontFamily="@font/chicle" />

        <RadioButton
            android:id="@+id/vegImgTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E1F5FE"
            android:text="@string/vegImgTxt"
            android:textColor="#1B5E20"
            android:textSize="36sp"
            android:textStyle="bold"
            app:fontFamily="@font/chicle" />
    </RadioGroup>

    <Button
        android:id="@+id/setButton"
        style="?borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="#FFFDE7"
        android:text="@string/setButton"
        android:textColor="#1B5E20"
        android:textSize="30sp"
        android:textStyle="bold"
        app:fontFamily="@font/chicle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/options" />

</androidx.constraintlayout.widget.ConstraintLayout>
