<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cmpt276.projectUI.splashScreen"
    android:background="@drawable/red_green_gradient">

    <TextView
        android:id="@+id/txtAuthors"
        android:layout_width="288dp"
        android:layout_height="86dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="184dp"
        android:gravity="center"
        android:text="@string/madeBy"
        android:textColor="#D0000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:fontFamily="@font/chicle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle"
        app:layout_constraintVertical_bias="0.85" />

    <Button
        android:id="@+id/btnSkip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="44dp"
        android:background="#AAFA3F3F"
        android:text="@string/skip"
        android:textSize="24sp"
        app:fontFamily="@font/chicle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAuthors" />

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="216dp"
        android:layout_height="222dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="#D0000000"
        android:textSize="70sp"
        android:textStyle="bold"
        app:fontFamily="@font/chicle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.324" />
</androidx.constraintlayout.widget.ConstraintLayout>
